--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,11 @@
-Flask>=1.1.2
 Flask-PyMongo>=2.3.0
-Jinja2>=2.10.1
 Flask-CORS
 flask-restx
 flask-swagger-ui
+click==8.1.3
+Flask==2.2.2
+gunicorn==20.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+Werkzeug==2.2.2
