--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,10 @@ jobs:
     - name: Install Podman
       run: |
         . /etc/os-release
-        sudo sh -c "echo 'deb http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/$ID_$VERSION_ID/ /' > /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list"
-        sudo wget -nv https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable/$ID_$VERSION_ID/Release.key -O Release.key
-        sudo apt-key add - < Release.key
-        sudo apt-get update -qq
-        sudo apt-get -qq -y install podman podman-docker
+        echo "deb http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/ /" | sudo tee /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list
+        curl -L "https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/Release.key" | sudo apt-key add -
+        sudo apt-get update
+        sudo apt-get -y install podman
 
     - name: Set up Python environment
       run: |
@@ -36,10 +35,7 @@ jobs:
 
     - name: Run tests (optional)
       run: |
-        # Add commands to execute tests, for example:
         echo "Run tests here"
-        # For example, in Flask:
-        # python -m pytest backend/tests
 
 #    - name: Cleanup
 #      if: always()
