--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,13 @@ jobs:
       with:
         python-version: '3.8'
 
+    - name: Create and activate virtual environment
+      run: |
+        python3 -m venv venv --without-pip
+        source venv/bin/activate
+        curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+        python get-pip.py
+
     - name: Set up Python environment
       run: |
         python3 -m venv venv
@@ -51,3 +58,4 @@ jobs:
       run: |
         # Add deployment commands here if necessary
         echo "Deployment steps here"
+
