--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,13 +39,13 @@ jobs:
 
     - name: Build and run with Podman Compose
       run: |
+        podman machine init
         podman-compose build
         podman-compose up -d 
         echo ${{ secrets.ORDA_TOKEN }} | podman login docker.io --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         podman tag localhost/orda_v10_backend:1.0 ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:1.0
         podman push ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:1.0
         
-
     - name: Run tests (optional)
       run: |
         echo "Run tests here"
