--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,10 @@ jobs:
       run: |
         podman network exists orda_v10_default || podman network create orda_v10_default
 
+    - name: Run Container with Network
+      run: |
+        podman run --network orda_v10_default --name mycontainer myimage
+
     - name: Debug Podman Network
       run: podman --log-level=debug network inspect orda_v10_default
   
