--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         }' | sudo tee /etc/cni/net.d/87-orda_v10_default.conflist
 
     - name: Log in to Docker Hub
-      run: echo ${{ secrets.DOCKER_PASSWORD }} | podman login docker.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      run: echo ${{ secrets.ORDA_TOKEN }} | podman login docker.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
     - name: Create or Verify Network
       run: |
