--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,17 +37,13 @@ jobs:
         podman build --arch amd64 -f ./backend/Dockerfile -t orda_v10_backend ./backend
         podman tag localhost/orda_v10_backend:1.0 ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:1.0
         echo ${{ secrets.ORDA_TOKEN }} | podman login docker.io --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        podman build --arch amd64 -t localhost/orda_v10_backend:1.0 ./backend
-        podman tag localhost/orda_v10_backend:1.0 ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:1.0
+        podman build --arch amd64 -t localhost/orda_v10_backend:latest ./backend
+        podman tag localhost/orda_v10_backend:latest ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:1.0
         podman push ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:1.0
         
     - name: Run tests (optional)
       run: |
         echo "Run tests here"
-
-    - name: Cleanup
-      if: always()
-      run: podman-compose down
 
     - name: Deploy (if needed)
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
