--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Build and run with Podman Compose
       run: |
         podman build --arch amd64 -f ./backend/Dockerfile -t orda_v10_backend ./backend
-        podman tag localhost/orda_v10_backend:1.0 ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:1.0
+        podman tag localhost/orda_v10_backend:latest ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:1.0
         echo ${{ secrets.ORDA_TOKEN }} | podman login docker.io --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         podman build --arch amd64 -t localhost/orda_v10_backend:latest ./backend
         podman tag localhost/orda_v10_backend:latest ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:1.0
