--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -33,10 +33,10 @@ jobs:
     - name: Build and run with Podman Compose
       run: |
         podman build --arch amd64 -f ./backend/Dockerfile -t orda_v10_backend ./backend
-        podman tag localhost/orda_v10_backend:latest ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:${{ variables.Development }}
+        podman tag localhost/orda_v10_backend:latest ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:${{ variables.DEVELOPMENT }}
         echo ${{ secrets.ORDA_TOKEN }} | podman login docker.io --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         podman build --arch amd64 -t localhost/orda_v10_backend:latest ./backend
-        podman tag localhost/orda_v10_backend:latest ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:${{ variables.Development }}
+        podman tag localhost/orda_v10_backend:latest ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:${{ variables.DEVELOPMENT }}
         
     - name: Run tests (optional)
       run: |
