--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         echo ${{ secrets.ORDA_TOKEN }} | podman login docker.io --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         podman build --arch amd64 -t localhost/orda_v10_backend:latest ./backend
         podman tag localhost/orda_v10_backend:latest ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:${{ secrets.PRODUCTION }}
-        podman push ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:dev
+        
         
     - name: Run tests (optional)
       run: |
@@ -47,5 +47,6 @@ jobs:
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: |
         # Add deployment commands here if necessary
-        echo "Deployment steps here"
+        echo "Deploying......"
+        podman push ${{ secrets.DOCKER_USERNAME }}/orda_v10_backend:${{ secrets.PRODUCTION }}
 
