--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -2,7 +2,8 @@ name: Continuous Integration and Deployment with Podman
 
 on:
   pull_request:
-    branches: [ main ]
+    branches-ignore:
+      - main 
 
 jobs:
   build-and-deploy:
