--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 pymongo[srv]
 Flask-PyMongo>=2.3.0
+Flask-Bcrypt
 Flask-CORS
 flask-restx
+Flask-JWT-Extended
 flask-swagger-ui
 click==8.1.3
 gunicorn==22.0.0
