--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -12,19 +12,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Install Podman (latest, safe repo)
+    - name: Install Podman (Official)
       run: |
-        . /etc/os-release
-        sudo mkdir -p /etc/apt/keyrings
-        curl -fsSL "https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/Release.key" \
-          | gpg --dearmor | sudo tee /etc/apt/keyrings/libcontainers.gpg > /dev/null
-    
-        echo "deb [signed-by=/etc/apt/keyrings/libcontainers.gpg] \
-          http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/ /" \
-          | sudo tee /etc/apt/sources.list.d/libcontainers.list
-    
         sudo apt-get update
-        sudo apt-get -y install podman
+        sudo apt-get install -y podman
+
   
     - name: Set up Python
       uses: actions/setup-python@v2
